fix Add button shifting when pill-incomplete updates

--- a/src/app/components/forms/post/post.styl
+++ b/src/app/components/forms/post/post.styl
@@ -113,6 +113,7 @@
 
 		&-enter
 			opacity: 0
+			position: absolute
 
 .-community-pill
 	flex-shrink: 0
